# Storage-Node-Interface-Protocol

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE4-EXECUTION-PLAN.md  PLAN.md  README.md
crates/sum-net/: Cargo.toml
crates/sum-net/src/: behaviour.rs  capability.rs  codec.rs  discovery.rs  events.rs  gossip.rs  identity.rs  lib.rs  nat.rs  swarm.rs  transport.rs
crates/sum-node/: Cargo.toml
crates/sum-node/src/: acl.rs  download.rs  lib.rs  main.rs  market_sync.rs  metrics.rs  peer_state.rs  por_worker.rs  rpc_client.rs  tx_builder.rs  upload.rs
crates/sum-node/tests/: market_sync_dispatch.rs  peer_identity_map.rs  upload_bounded.rs
crates/sum-store/: Cargo.toml
crates/sum-store/src/: announce.rs  assignment.rs  chunker.rs  content_id.rs  error.rs  fetch.rs  gc.rs  lib.rs  manifest.rs  manifest_index.rs  merkle.rs  mmap.rs  serve.rs  store.rs  verify.rs
crates/sum-types/: Cargo.toml
crates/sum-types/src/: config.rs  error.rs  lib.rs  node.rs  rpc_types.rs  storage.rs
docs/: CLIENT-MODE-GAP.md  PHASE4-EXECUTION-PLAN.md  PHASE4-IMPLEMENTATION-PLAN.md  PLAN.md  SECURITY-ANALYSIS.md  WAN-DISCOVERY-AND-HARDENING.md
tests/: 01-sum-types.md  02-sum-net.md  03-sum-store.md  04-phase2-sum-types.md  05-phase2-sum-net.md  06-phase2-sum-store.md  07-phase2-sum-node.md  08-integration-tests.md  09-phase3-assignment.md  10-phase4-foundation.md  phase1-test-report.md  phase2-test-report.md
tests/integration/: README.md  test_e2e_l1.sh  test_p2p.sh
