[workspace]
resolver = "2"
members = [
    "crates/sum-types",
    "crates/sum-net",
    "crates/sum-store",
    "crates/sum-node",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/SUM-INNOVATION/SUM-Storage-Node-Protocol"
rust-version = "1.85"

# ─── Shared Dependencies ──────────────────────────────────────────────────────

[workspace.dependencies]

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde       = { version = "1.0",         features = ["derive"] }
serde_json  = "1.0"
bincode     = { version = "2.0.0-rc.3", features = ["serde"] }
ciborium    = "0.2"

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ─── Networking (libp2p) ────────────────────────────────────────────────────

libp2p = { version = "0.55", features = [
    "macros",
    "tokio",
    "noise",
    "quic",
    "tcp",
    "dns",
    "kad",
    "mdns",
    "gossipsub",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
] }

libp2p-identity = "0.2"
prost           = "0.13"
prost-build     = "0.13"

# ─── Storage ───────────────────────────────────────────────────────────────

memmap2    = "0.9"
blake3     = "1.5"
cid        = "0.11"
multihash  = "0.19"
tempfile   = "3.14"

# ─── Async Utilities ─────────────────────────────────────────────────────────

futures     = "0.3"
async-trait = "0.1"

# ─── Phase 2: L1 RPC & Transaction ─────────────────────────────────────────

reqwest       = { version = "0.12", features = ["json"] }
bs58          = "0.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
bincode1      = { package = "bincode", version = "1.3" }
hex             = "0.4"
serde-big-array = "0.5"

# ─── Utilities ───────────────────────────────────────────────────────────────

bytes   = "1.9"
uuid    = { version = "1.11", features = ["v4"] }
clap    = { version = "4.5",  features = ["derive", "env"] }
rand    = "0.9"
chrono  = { version = "0.4",  features = ["serde"] }

# ─── Internal Crates ─────────────────────────────────────────────────────────

sum-types = { path = "crates/sum-types" }
sum-net   = { path = "crates/sum-net" }
sum-store = { path = "crates/sum-store" }
