[package]
name             = "sum-net"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sum-types  = { workspace = true }
libp2p     = { workspace = true }
blake3     = { workspace = true }
bs58       = { workspace = true }
futures    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
bincode    = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
