[package]
name             = "sum-node"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sum-node"
path = "src/main.rs"

[dependencies]
sum-types          = { workspace = true }
sum-net            = { workspace = true }
sum-store          = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
