[package]
name             = "sum-node"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sum-node"
path = "src/main.rs"

[[bin]]
name = "e2e-helper"
path = "src/bin/e2e_helper.rs"

[dependencies]
sum-types          = { workspace = true }
sum-net            = { workspace = true }
sum-store          = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
blake3             = { workspace = true }
reqwest            = { workspace = true }
bs58               = { workspace = true }
ed25519-dalek      = { workspace = true }
bincode1           = { workspace = true }
hex                = { workspace = true }
serde-big-array    = { workspace = true }
