[package]
name             = "sum-store"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sum-types  = { workspace = true }
sum-net    = { workspace = true }
libp2p     = { workspace = true }
memmap2    = { workspace = true }
blake3     = { workspace = true }
cid        = { workspace = true }
multihash  = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
ciborium   = { workspace = true }
bincode    = { workspace = true }
async-trait = { workspace = true }
anyhow     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio      = { workspace = true }
