[package]
name             = "sum-types"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
libp2p-identity = { workspace = true }
blake3          = { workspace = true }
